# rocq-scurve

./: .gitignore  README.md  _CoqProject  configure.sh  coq-scurve.opam
.github/workflows/: build.yml  generate_docs.yml
theories/: Admissible.v  Embed.v  Eq.v  Example1.v  Example2.v  Example3.v  ListExt.v  Main.v  PrimitiveSegment.v  Reduction.v  Segment.v
